@startuml
'https://plantuml.com/sequence-diagram

class ToDoApp
{
    + static void main(String[] args)
    + void start(Stage primaryStage)
}

class ToDoController
{
    - TextField itemDescAdd
    - TextField editDesc
    - TextField dueDateAdd
    - TextField editDueDate
    - TextField itemDescSelect
    - TextField fileLoad
    - TextArea display
    - TextArea error
    - List<ListItem> list
    + void addButton ()
    + void addItem (String itemDesc, String dueDate)
    + void removeButton ()
    + void removeItem (String inputRem)
    + void removeAllItems ()
    + void editDescButton ()
    + void editDesc (String inputEdit, String inputDesc)
    + void editDueDateButton ()
    + static String validDueDate (int dueDateLen, String inputDueDate)
    + void editDueDate (String inputEdit, String inputDueDate)
    + void markCompButton ()
    + void markItemComp (String inputEdit)
    + void markIncompButton ()
    + void markItemIncomp (String inputEdit)
    + void displayItems ()
    + void displayIncomplete ()
    + void displayComplete ()
    + void saveList ()
    + void loadListButton ()
    + void loadList (String filepath)
}

class ListItem
{
    - String itemDesc
    - String dueDate
    - int isComplete
    + ListItem (String itemDesc, String dueDate, int isComplete)
    + void setItemDesc(String itemDesc)
    + void setItemDueDate(String dueDate)
    + void setIsComplete(int isComplete)
    + String getDesc()
    + String getDueDate()
    + int getIsComplete()
}
ToDoApp <|--- ToDoController
ToDoController <|--- ListItem

@enduml